this commit will fix minor ui spacing

--- a/src/stylesheets/app.scss
+++ b/src/stylesheets/app.scss
@@ -32,7 +32,7 @@ $mustard-pastel: #f2c368;
 	height: 40px;
 	border-radius: 30px;
 	padding-top: 2px;
-	margin-top: 55px;
+	margin-top: 105px;
 }
 
 .container {
